[package]
name = "lib_mr"
version = "0.2.0"
edition = "2021"
license = "Except as otherwise specified in the source code headers for specific files, the source code in this repository is made available to you under your choice of the following starting with Redis 8: (i) Redis Source Available License 2.0 (RSALv2); (ii) the Server Side Public License v1 (SSPLv1); or (iii) the GNU Affero General Public License version 3 (AGPLv3). Please review the license folder for the full license terms and conditions. Prior versions remain subject to (i) and (ii)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs", branch = "master", default-features = false }
serde_json = "1"
serde = "1"
serde_derive = "1"
libc = "0.2"
linkme = "0.3"

[build-dependencies]
bindgen = "0.70"

[lib]
crate-type = ["rlib"]
name = "mr"
path = "rust_api/lib.rs"

[features]
# default = ["min-redis-compatibility-version-6-0"]
default = ["min-redis-compatibility-version-7-4"]
min-redis-compatibility-version-7-4 = ["redis-module/min-redis-compatibility-version-7-4"]
min-redis-compatibility-version-7-2 = ["redis-module/min-redis-compatibility-version-7-2"]
min-redis-compatibility-version-7-0 = ["redis-module/min-redis-compatibility-version-7-0"]
min-redis-compatibility-version-6-2 = ["redis-module/min-redis-compatibility-version-6-2"]
min-redis-compatibility-version-6-0 = ["redis-module/min-redis-compatibility-version-6-0"]
