[package]
name = "lib_mr_derive"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-RSALv2 OR SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
quote = "1"

[lib]
name = "mr_derive"
path = "src/lib.rs"
proc-macro = true
