[package]
name = "lib_mr_derive"
version = "0.1.0"
edition = "2021"
license = "Except as otherwise specified in the source code headers for specific files, the source code in this repository is made available to you under your choice of the following starting with Redis 8: (i) Redis Source Available License 2.0 (RSALv2); (ii) the Server Side Public License v1 (SSPLv1); or (iii) the GNU Affero General Public License version 3 (AGPLv3). Please review the license folder for the full license terms and conditions. Prior versions remain subject to (i) and (ii)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
quote = "1"

[lib]
name = "mr_derive"
path = "src/lib.rs"
proc-macro = true
