[package]
name = "lib_mr_derive"
version = "0.1.0"
edition = "2021"
license = "Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1) or the GNU Affero General Public License version 3 (AGPLv3)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
quote = "1"

[lib]
name = "mr_derive"
path = "src/lib.rs"
proc-macro = true
