[package]
name = "mr_test_module"
version = "0.2.0"
authors = ["meir@redislabs.com <meir@redislabs.com>"]
edition = "2021"
license = "Except as otherwise specified in the source code headers for specific files, the source code in this repository is made available to you under your choice of the following starting with Redis 8: (i) Redis Source Available License 2.0 (RSALv2); (ii) the Server Side Public License v1 (SSPLv1); or (iii) the GNU Affero General Public License version 3 (AGPLv3). Please review the license folder for the full license terms and conditions. Prior versions remain subject to (i) and (ii)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = "1"
serde_derive = "1"
libc = "0.2"
lib_mr = { path = "../../" }
lib_mr_derive = { path = "../../LibMRDerive/" }
linkme = "0.3"

[lib]
name = "mr_test"
crate_type = ["cdylib"]
